fix: breaking categories listing on small screens

--- a/src/pages/AddModel/ConfigsConstraints/CategoriesListing/_categories-listing.scss
+++ b/src/pages/AddModel/ConfigsConstraints/CategoriesListing/_categories-listing.scss
@@ -1,7 +1,7 @@
 .categories-listing {
   display: flex;
   flex-direction: column;
-  height: 52vh;
+  height: 55vh;
   max-height: 70vh;
   min-height: 20rem;
 
