--- a/src/pages/AddModel/_add-model.scss
+++ b/src/pages/AddModel/_add-model.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   height: 100svh;
+  position: fixed;
+  width: stretch;
 
   &__content {
     display: flex;
